# CloudPoint

./: CMakeLists.txt
include/: LoadData.hpp
src/: GenPointCloud.cpp  LoadData.cpp  LoadData.hpp
